--- a/src/sass/modules/_pagination.scss
+++ b/src/sass/modules/_pagination.scss
@@ -1,3 +1,9 @@
+#pagi {
+	position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
 .pagination {
 	display:flex;
 	justify-content: flex-end;
